[gd_scene load_steps=8 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Calendar/Day.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.509758, 0.4355, 0.67, 1 )
border_color = Color( 0.388235, 0.333333, 0.509804, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.282353, 0.215686, 0.431373, 1 )
border_color = Color( 0.282353, 0.215686, 0.431373, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Day" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1075.0
margin_bottom = 2335.0

[node name="vspace" type="Label" parent="VBoxContainer"]
margin_right = 1070.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 1 )
text = "

"
align = 1

[node name="DayTitle" type="Label" parent="VBoxContainer"]
margin_top = 295.0
margin_right = 1070.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 1 )
text = "Notes for 21/11/2021"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 394.0
margin_right = 1070.0
margin_bottom = 2326.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="NotesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1070.0
margin_bottom = 1932.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 2330.0
margin_right = 1070.0
margin_bottom = 2330.0
mouse_filter = 1

[node name="NewNoteButton" type="Button" parent="VBoxContainer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -212.0
margin_right = -53.0
margin_bottom = -64.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "+"

[connection signal="pressed" from="VBoxContainer/Control/NewNoteButton" to="." method="_on_NewNoteButton_pressed"]
